# layercake-tool

./: .env  .env.example  .gitignore  .gitmodules  AGENT-MODAL.md  AGENT-UI.md  AGENTS.md  BUILD.md  BUILD_SUCCESS_REPORT.md  CANVAS_ISSUES.md  CHANGES.md  CHAT-IMPL.md  CHAT-REVIEW.md  CHAT-SPEC.md  CLAUDE.md  CLEANUP.md  COLLAB.md  Cargo.toml  DATASET_SOURCE_TRACKING_SUMMARY.md  DATASOURCE_IMPLEMENTATION_PLAN.md  DESIGN-DAG.md  DESIGN-UPDATE.md  DESIGN.md  DEV_SCRIPTS.md  DIVERGENCE.md  DONE.md  ENV-plan.md  FINDINGS.md  FINDINGS_WS.md  FIXES.md  FRONTEND_OPTIMIZATION_SUMMARY.md  GEMINI.md  GRAPHQL_SCHEMA_REVIEW.md  GRAPH_EDITOR_LAYERS_PANEL.md  IMPLEMENTATION-SUMMARY.md  IMPLEMENTATION.md  IMPLEMENTATION_PLAN.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_V2.md  IMPROVEMENTS.md  (+43 more)
layercake-cli/: Cargo.toml  build.rs
layercake-cli/docs/: rig-tools-registry.md
layercake-cli/src/: api.rs  db_info.rs  doc.rs  doctor.rs  main.rs  query.rs  query_payloads.rs  repl.rs  schema_dump.rs  schema_introspection.rs
layercake-cli/src/chat_credentials_cli/: mod.rs
layercake-cli/src/console/: commands.rs  context.rs  mod.rs  output.rs
layercake-code-analysis/: Cargo.toml  code-analysis-spec.md
layercake-code-analysis/src/: cli.rs  lib.rs
layercake-code-analysis/src/analyzer/: javascript.rs  mod.rs  python.rs
layercake-code-analysis/src/infra/: api_gateway.rs  correlation.rs  enhanced_correlation.rs  event_sources.rs  graph.rs  mod.rs  model.rs  scanner.rs
layercake-code-analysis/src/report/: markdown.rs  mod.rs
layercake-code-analysis/tests/: correlation_tests.rs  integration_tests.rs
layercake-core/: Cargo.toml
layercake-core/docs/: graph_id_audit.md  transaction-patterns.md
layercake-core/examples/: rig_spike.rs  rig_spike_rmcp.rs  rig_spike_simple.rs  rig_spike_streaming.rs  rig_spike_tooldyn.rs  test_rig_integration.rs
layercake-core/src/: app_context.rs  code_analysis_enhanced_solution_graph.rs  code_analysis_graph.rs  code_analysis_solution_graph.rs  common.rs  data_loader.rs  dev_utils.rs  doctor.rs  generate_commands.rs  graph.rs  graph_diff.rs  infra_graph.rs  lib.rs  main.rs  palette.rs  plan.rs  plan_execution.rs  sequence_context.rs  sequence_types.rs  story_types.rs
layercake-core/src/app_context/: data_set_operations.rs  graph_operations.rs  library_operations.rs  mod.rs  plan_dag_operations.rs  plan_operations.rs  preview_operations.rs  project_operations.rs  story_operations.rs
layercake-core/src/auth/: mod.rs
layercake-core/src/chat_credentials_cli/: mod.rs
layercake-core/src/collaboration/: coordinator.rs  mod.rs  project_actor.rs  types.rs
layercake-core/src/common/: db_errors.rs  error_helpers.rs  handlebars.rs  mod.rs
layercake-core/src/console/: commands.rs  context.rs  mod.rs  prompt.rs
layercake-core/src/database/: connection.rs  mod.rs  test_utils.rs
layercake-core/src/errors/: auth.rs  common.rs  core_error.rs  data_set.rs  data_source.rs  graph.rs  import_export.rs  mod.rs  plan.rs
layercake-core/src/export/: csv_common.rs  mod.rs  sequence_renderer.rs  to_csv_edges.rs  to_csv_matrix.rs  to_csv_nodes.rs  to_custom.rs  to_dot.hbs  to_dot.rs  to_dot_hierarchy.hbs  to_dot_hierarchy.rs  to_gml.rs  to_jsgraph.hbs  to_jsgraph.rs  to_json.rs  to_mermaid.hbs  to_mermaid.rs  to_mermaid_mindmap.hbs  to_mermaid_mindmap.rs  to_mermaid_sequence.hbs  to_mermaid_sequence.rs  to_mermaid_treemap.hbs  to_mermaid_treemap.rs  to_plantuml.hbs  to_plantuml.rs  to_plantuml_mindmap.hbs  to_plantuml_mindmap.rs  to_plantuml_sequence.hbs  to_plantuml_sequence.rs  to_plantuml_wbs.hbs  to_plantuml_wbs.rs
layercake-core/src/graphql/: chat_manager.rs  context.rs  errors.rs  execution_events.rs  mod.rs  schema.rs
layercake-core/src/mcp/: mod.rs  resources.rs  security.rs  server.rs
layercake-core/src/pipeline/: dag_context.rs  dag_executor.rs  dataset_importer.rs  datasource_importer.rs  graph_builder.rs  graph_data_builder.rs  graph_data_persist_utils.rs  layer_operations.rs  merge_builder.rs  mod.rs  persist_utils.rs  types.rs
layercake-core/src/plan_dag/: config.rs  edge.rs  filter.rs  metadata.rs  mod.rs  node.rs  position.rs  transforms.rs
layercake-core/src/projections/: graphql.rs  mod.rs
layercake-core/src/server/: app.rs  mod.rs
layercake-core/src/services/: auth_service.rs  authorization.rs  (+30 more)
layercake-core/tests/: auth.rs  dag_executor_graph_data_test.rs  dataset_bulk_alias_roundtrip.rs  dataset_source_tracking.rs  e2e_mcp_test.rs  filter_node_test.rs  graph_data_builder_test.rs  graph_data_integrity_test.rs  graph_data_pipeline_e2e.rs  graph_edit_replay_test.rs  graph_edit_service_test.rs  graph_layer_placeholder_test.rs  graph_service_label_fallback_test.rs  integration_test.rs  migration_validation_test.rs  no_legacy_graph_tables.rs  parity_smoke_test.rs  project_archive_roundtrip.rs  rag_integration_test.rs  rig_spike_simple.rs  xlsx_compat_test.rs
layercake-data-acquisition/: Cargo.toml
layercake-data-acquisition/src/: config.rs  dataset_generation.rs  dataset_schema.rs  embeddings.rs  lib.rs  tagging.rs  vector_store.rs
layercake-integration-tests/: Cargo.toml
layercake-integration-tests/tests/: projections_roundtrip.rs
layercake-projections/: Cargo.toml
layercake-projections/src/: graphql.rs  lib.rs  server.rs  service.rs
layercake-projections/tests/: projection_service_test.rs
layercake-server/: Cargo.toml
layercake-server/src/: lib.rs  main.rs
layercake-server/tests/: collaboration_actor_test.rs  core_error_mapping.rs  golden_errors.rs
layercake-test-utils/: Cargo.toml
layercake-test-utils/src/: db.rs  fixtures.rs  lib.rs  temp.rs
layercake-tool/: .env  Cargo.toml  README-Tips.md  REFACTORING.md  TODO.md
layercake-tool/src/: common.rs  data_loader.rs  graph.rs  graph_utils.rs  graphql_server.rs  lib.rs  main.rs  plan.rs  plan_execution.rs
layercake-tool/tests/: integration_test.rs
src-tauri/: .taurignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: dev.json  projection-windows.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: run-frontend.js
src-tauri/src/: main.rs  server.rs
(+1203 files in other folders)
