[package]
name = "layercake-tool"
version = "0.1.6"
edition = "2021"

[lib]
name = "layercake"
path = "src/lib.rs"

[[bin]]
name = "layercake"
path = "src/main.rs"

[features]
default = ["server"]
cli = []
server = [
    "dep:axum",
    "dep:tokio",
    "dep:tower",
    "dep:tower-http",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:chrono",
    "dep:uuid",
]

[dependencies]
# Core dependencies
serde_yaml = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.2.5"
include_dir = "0.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
handlebars = "4.5.0"
regex = "1.11.1"
notify = "8.0.0"
csv = "1.3.1"
indexmap = { version = "2", features = ["serde"] }

# Server dependencies (optional)
axum = { version = "0.7", optional = true }
tokio = { version = "1.0", features = ["full"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], optional = true }
sea-orm-migration = { version = "0.12", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }

