[package]
name = "layercake-tool"
version = "0.1.7"
edition = "2021"

[lib]
name = "layercake"
path = "src/lib.rs"

[[bin]]
name = "layercake"
path = "src/main.rs"

[features]
default = ["server", "mcp"]
cli = []
server = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:chrono",
    "dep:uuid",
    "dep:utoipa",
    "dep:utoipa-swagger-ui",
]
graphql = [
    "server",
    "dep:async-graphql",
    "dep:async-graphql-axum",
]
mcp = [
    "server",
    "dep:axum-mcp",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:url",
]
all-apis = ["server", "graphql", "mcp"]

[dependencies]
# Core dependencies
serde_yaml = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.2.5"
include_dir = "0.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
handlebars = "4.5.0"
regex = "1.11.1"
notify = "8.0.0"
csv = "1.3.1"
indexmap = { version = "2", features = ["serde"] }

# Update command dependencies
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
async-trait = "0.1"
thiserror = "1.0"
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }

# Server dependencies (optional)
axum = { version = "0.7.9", features = ["ws"], optional = true }
tower = { version = "0.4", optional = true }
tower-http = { version = "0.5", features = ["cors", "fs"], optional = true }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"], optional = true }
sea-orm-migration = { version = "0.12", optional = true }
chrono = { version = "0.4", features = ["serde"], optional = true }
uuid = { version = "1.0", features = ["v4"], optional = true }
utoipa = { version = "4.0", features = ["axum_extras"], optional = true }
utoipa-swagger-ui = { version = "6.0", features = ["axum"], optional = true }

# GraphQL dependencies (optional)
async-graphql = { version = "7.0", features = ["chrono", "uuid"], optional = true }
async-graphql-axum = { version = "7.0", optional = true }

# MCP dependencies (optional)  
axum-mcp = { path = "external-modules/axum-mcp", optional = true }
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"], optional = true }
futures-util = { version = "0.3", optional = true }
url = { version = "2.0", optional = true }

[dev-dependencies]
# Test dependencies for E2E tests
tokio-test = "0.4"
futures-util = "0.3"
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-webpki-roots"] }

