[workspace]
members = [
    "layercake-core", "layercake-data-acquisition",
    "src-tauri",
]
resolver = "2"

[workspace.package]
version = "0.3.5"
edition = "2021"
authors = ["Layercake Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/michiel/layercake-tool"

[workspace.dependencies]
# Core dependencies
serde_yaml = "0.9"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-tree = "0.2.5"
include_dir = "0.6"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
handlebars = "4.5.0"
regex = "1.11.1"
notify = "8.0.0"
csv = "1.3.1"
indexmap = { version = "2", features = ["serde"] }

# Update command dependencies
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
semver = "1.0"
sha2 = "0.10"
async-trait = "0.1"
thiserror = "1.0"
strum = { version = "0.26", features = ["derive"] }
colored = "2.0"
tokio = { version = "1.0", features = ["full"] }

# Server dependencies
axum = { version = "0.8.4", features = ["ws", "multipart"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
sea-orm = { version = "0.12", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.12", default-features = false, features = ["runtime-tokio-rustls", "sqlx-sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }

# GraphQL dependencies
async-graphql = { version = "7.0", features = ["chrono", "uuid"] }
async-graphql-axum = "7.0"
async-stream = "0.3"
lazy_static = "1.4"

# Authentication dependencies
bcrypt = "0.15"

# MCP dependencies
axum-mcp = { path = "external-modules/axum-mcp" }
tokio-tungstenite = { version = "0.26", features = ["rustls-tls-webpki-roots"] }
futures-util = "0.3"
url = "2.0"

# WebSocket collaboration dependencies
dashmap = "6.0"

# Spreadsheet dependencies
calamine = "0.26"
rust_xlsxwriter = "0.80"
spreadsheet-ods = "0.25"
icu_locid = "1.5"
zip = { version = "0.6", default-features = false, features = ["deflate"] }

# Agent integration dependencies
rig = { version = "0.25.0", package = "rig-core", features = ["rmcp"] }

# Tauri dependencies
tauri = { version = "2.0", features = ["macos-private-api"] }
tauri-build = { version = "2.0", features = [] }
tauri-plugin-dialog = { version = "2.0" }
tauri-plugin-shell = { version = "2.0" }
