[package]
name = "layercake-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "layercake"
path = "src/lib.rs"

[[bin]]
name = "layercake"
path = "src/main.rs"

[features]
default = ["server", "mcp", "graphql", "console", "rmcp"]
cli = []
server = [
    "dep:axum",
    "dep:tower",
    "dep:tower-http",
    "dep:sea-orm",
    "dep:sea-orm-migration",
    "dep:chrono",
    "dep:uuid",
]
graphql = [
    "server",
    "dep:async-graphql",
    "dep:async-graphql-axum",
    "dep:async-stream",
    "dep:lazy_static",
    "dep:tokio-tungstenite",
    "dep:futures-util",
    "dep:dashmap",
    "dep:json-patch",
]
mcp = [
    "server",
    "dep:axum-mcp",
    "dep:tokio-tungstenite",
    "dep:futures-util",
]
all-apis = ["server", "graphql", "mcp"]
console = ["dep:clap-repl", "dep:rig", "dep:nu-ansi-term", "mcp", "dep:chrono"]
rmcp = ["dep:rmcp"]

[dependencies]
# Core dependencies
serde_yaml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-tree = { workspace = true }
include_dir = { workspace = true }
clap = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }
csv = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
once_cell = "1.19"

# Update command dependencies
reqwest = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"

# Server dependencies (optional)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
sea-orm = { workspace = true, optional = true }
sea-orm-migration = { workspace = true, optional = true }
chrono = { workspace = true, optional = true }
uuid = { workspace = true, optional = true }

# GraphQL dependencies (optional)
async-graphql = { workspace = true, optional = true }
async-graphql-axum = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
lazy_static = { workspace = true, optional = true }
json-patch = { version = "2.0", optional = true }

# Authentication dependencies
bcrypt = { workspace = true }

# MCP dependencies (optional)
axum-mcp = { workspace = true, optional = true }
tokio-tungstenite = { workspace = true, optional = true }
futures-util = { workspace = true, optional = true }

# Console dependencies (optional)
clap-repl = { version = "0.3.2", optional = true }
rig = { workspace = true, optional = true }
nu-ansi-term = { version = "0.49.0", optional = true }
rmcp = { version = "0.9.1", optional = true, features = ["client", "transport-streamable-http-client-reqwest"] }

# WebSocket collaboration dependencies (optional)
dashmap = { workspace = true, optional = true }

# Spreadsheet dependencies
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
spreadsheet-ods = { workspace = true }
icu_locid = { workspace = true }
zip = { workspace = true }

# Data acquisition
layercake-data-acquisition = { path = "../layercake-data-acquisition" }
layercake-code-analysis = { path = "../layercake-code-analysis" }

[dev-dependencies]
# Test dependencies for E2E tests
tokio-test = "0.4"
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
