[package]
name = "layercake-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "layercake"
path = "src/lib.rs"

[features]
default = []
graphql = []

[dependencies]
# Core dependencies
serde_yaml = { workspace = true }
tracing = { workspace = true }
include_dir = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
handlebars = { workspace = true }
regex = { workspace = true }
notify = { workspace = true }
csv = { workspace = true }
indexmap = { workspace = true }
url = { workspace = true }
once_cell = "1.19"

# Update command dependencies
reqwest = { workspace = true }
semver = { workspace = true }
sha2 = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
strum = { workspace = true }
colored = { workspace = true }
tokio = { workspace = true }
base64 = "0.22"

sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }

# Authentication dependencies
bcrypt = { workspace = true }

# Spreadsheet dependencies
calamine = { workspace = true }
rust_xlsxwriter = { workspace = true }
spreadsheet-ods = { workspace = true }
icu_locid = { workspace = true }
zip = { workspace = true }

layercake-code-analysis = { path = "../layercake-code-analysis" }
layercake-projections = { path = "../layercake-projections" }

[dev-dependencies]
# Test dependencies for E2E tests
tokio-test = "0.4"
futures-util = { workspace = true }
tokio-tungstenite = { workspace = true }
thiserror = { workspace = true }
