[package]
name = "layercake-data-acquisition"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
csv = { workspace = true }
futures = "0.3"
indexmap = { workspace = true }
rig = { workspace = true }
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
pdf-extract = "0.7"
calamine = { workspace = true }
quick-xml = "0.31"
zip = { workspace = true }
