[package]
name = "layercake-projections"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { workspace = true }
async-graphql-axum = { workspace = true }
tokio = { workspace = true }
tokio-stream = { version = "0.1", features = ["sync"] }
sea-orm = { workspace = true }
serde_json = { workspace = true }
zip = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
base64 = "0.22"
tracing = { workspace = true }
serde = { workspace = true }
