[package]
name = "layercake-tool"
version.workspace = true
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "layercake"
path = "src/lib.rs"

[[bin]]
name = "layercake"
path = "src/main.rs"

[dependencies]
# Workspace-inherited dependencies
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
handlebars.workspace = true

# Crate-specific dependencies
tracing-tree = "0.2.5"
include_dir = "0.6"
toml = "0.5"
regex = "1.11.1"
notify = "8.0.0"
csv = "1.3.1"
indexmap = { version ="2", features = ["serde"] }

async-graphql = "6.0"
async-graphql-axum = "6.0"
axum = "0.6"

sea-orm = { version = "0.12", features = ["runtime-tokio-native-tls", "sqlx-sqlite", "macros"] }
sea-orm-migration = "0.12"
sqlx-sqlite = "0.7"
futures = "0.3"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
tower-http = { version = "0.4.0", features = ["cors"], default-features = false }
