[package]
name = "layercake-tauri"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
layercake_core = { path = "../layercake-core", package = "layercake-core", features = ["server", "graphql"] }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
rand = "0.8"
tauri-plugin-log = { version = "2", features = ["tracing"] }

# Server dependencies
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }

# Database dependencies
sea-orm = { workspace = true }
sea-orm-migration = { workspace = true }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
